syntax = "proto3";

package user;

import "google/protobuf/empty.proto";

option java_package = "proto.user";
option java_multiple_files = true;

message Input {
  string firstName = 1;
  string lastName = 2;
  string email = 3;
  string username = 4;
  string password = 5;
}

message Input1 {
  string email = 1;
  string password = 2;
}

message Input2 {
  string accessToken = 1;
}

message Output {
  string result = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string username = 5;
  string password = 6;
}

message Output2 {

  repeated Input user = 1;

}

message InputSearch{

    string param = 1;

}

service UserService {

  rpc addUser(Input) returns (Output) {};

  rpc logInUser(Input1) returns (Output) {};

  rpc invalidateUser(Input2) returns (Output) {};

  rpc updateUser(Input) returns (Output) {};

  rpc getAllUsers(google.protobuf.Empty) returns (Output2) {};

  rpc searchUsers(InputSearch) returns (Output2) {};

}